# code-sheriff

./: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  tflint.hcl
.github/workflows/: build-and-test.yml
app/: .dockerignore  .env.local  api_handler.py  middlewares.py  models.py  settings.py
app/prompts/: pr_review.txt
infrastructure/: api_gateway.tf  iam.tf  lambda.tf  layer.tf  ssm.tf  variables.tf
scripts/: build_api.sh  build_requirements_layer.sh
tests/: test_api_handler.py  test_middlewares.py
