[project]
name = "code-sheriff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
    "bandit>=1.9.2",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ujson>=5.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "pytest-env>=1.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

